# scalex_engine

./: .env  log.txt  main.py  pyproject.toml  test.py
data/web_scrapping/isp/awaser/: awaser_tookit.py  fiber_home.py
data/web_scrapping/isp/friendly/: friendly_mobile.py  friendly_toolkit.py
data/web_scrapping/isp/omantel/: baqat.py.archive  baqati.py  heyyak.py  heyyak_plus.py  heyyak_plus.py.archive  omantel_tookit.py  tourist_packs.py
data/web_scrapping/isp/omantel/fixed_broadband/: afaaq.py  basic.py  ultra_fast.py  wireless.py
data/web_scrapping/isp/omantel/mobile/: aman_plan.py  aman_postpaid.py  baqati_alufuq.py  erada_baqati.py  hayyak_data_only_plan.py  heyyak_plus.py  jawazk_gcc.py  jawazk_world.py  new_baqati.py  tourist_packs.py
data/web_scrapping/isp/ooredoo/: hala.py  omanuna.py  ooredoo_tookit.py  shahry.py
data/web_scrapping/isp/ooredoo/fixed_broadband/: fiber_home_internet.py  five_g_home_internet.py  four_g_home_internet.py  satellite_home_internet.py
data/web_scrapping/isp/ooredoo/mobile/: hala.py  hala_plans.py  (+5 more)
data/web_scrapping/isp/redbull/: redbull_mobile_plans.py  redbull_toolkit.py
data/web_scrapping/isp/renna/: renna_mobile.py  renna_toolkit.py
data/web_scrapping/isp/rennah/: rennah_mobile.py  rennah_toolkit.py
data/web_scrapping/isp/unit_test/: test_general.py
data/web_scrapping/isp/vodafone/: internationalRoaming.py  mobilePlans.py  moreServices.py  ourAddOns.py  smsPublicParking.py  vodafone_tookit.py
domain/: package.py  scalex_toolkit.py
domain/constants/: common_data.py
utils/: package.py  scalex_toolkit.py
(+1 files in other folders)
