[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Ahmed Al Kuyomi <ahmed.alkuyomi@swiftbeam.co>"]
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.9.13"
mysql = "^0.0.3"
# requests = "^2.28.2" Change version
# pandas = "^2.28.2" Change version
# xml = "^2.28.2" Change version
secure-smtplib = "^0.1.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"